// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MovieCardHead with header nav 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt="The Grand Budapest Hotel"
      src="img/the-grand-budapest-hotel-bg.jpg"
    />
  </div>,
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>,
  <header
    className="page-header movie-card__head"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link"
        href="/"
        onClick={[Function]}
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <nav
      className="breadcrumbs"
    >
      <ul
        className="breadcrumbs__list"
      >
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link"
            href="/films/1"
            onClick={[Function]}
          >
            The Grand Budapest Hotel
          </a>
        </li>
        <li
          className="breadcrumbs__item"
        >
          <a
            className="breadcrumbs__link"
          >
            Add review
          </a>
        </li>
      </ul>
    </nav>
    <div
      className="user-block"
    >
      <a
        className="user-block__link"
        href="/login"
        onClick={[Function]}
      >
        Sign in
      </a>
    </div>
  </header>,
]
`;

exports[`Render MovieCardHead without header nav 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt="The Grand Budapest Hotel"
      src="img/the-grand-budapest-hotel-bg.jpg"
    />
  </div>,
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>,
  <header
    className="page-header movie-card__head"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link"
        href="/"
        onClick={[Function]}
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="user-block"
    >
      <a
        className="user-block__link"
        href="/login"
        onClick={[Function]}
      >
        Sign in
      </a>
    </div>
  </header>,
]
`;
